smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-must-come-after-namespace.smithy
// Parse error at line 4, column 1 near `use`: Use statements must appear after a namespace is defined
$version: "0.5.0"

use smithy.example#Foo

namespace com.foo

string MyString
